--- a/testimonial-box-switcher/index.html
+++ b/testimonial-box-switcher/index.html
@@ -18,22 +18,17 @@
       <div class="fas fa-quote-right fa-quote"></div>
       <div class="fas fa-quote-left fa-quote"></div>
       <p class="testimonial">
-        I've worked with literally hundreds of HTML/CSS developers and I have to
-        say the top spot goes to this guy. This guy is an amazing developer. He
-        stresses on good, clean code and pays heed to the details. I love
-        developers who respect each and every aspect of a throughly thought out
-        design and do their best to put it in code. He goes over and beyond and
-        transforms ART into PIXELS - without a glitch, every time.
+        Dasturlashni o‘rganish mening orzuyim edi, lekin nimadan boshlashni bilmasdim. Bu kurs menga aniq yo‘l-yo‘riq va zarur bilimlarni berdi. Har bir mavzu sodda tilda, tushunarli tarzda yoritilgan. Amaliy mashqlar orqali bilimlarim mustahkam bo‘ldi. Kod yozish endi mening sevimli mashg‘ulotimga aylangan. O‘zimni haqiqiy dasturchi sifatida tasavvur qilishdan to‘xtamayapman.
       </p>
       <div class="user">
         <img
-          src="https://randomuser.me/api/portraits/women/46.jpg"
+          src="https://media.licdn.com/dms/image/v2/D4D03AQH6_LH1L9cMeg/profile-displayphoto-shrink_200_200/B4DZTu1ZWMHIAY-/0/1739173762856?e=2147483647&v=beta&t=TALR-nn7-va71xh505yfaIG0YG40pK2S3vNHcK8tmx0"
           alt="user"
           class="user-image"
         />
         <div class="user-details">
-          <h4 class="username">Miyah Myles</h4>
-          <p class="role">Marketing</p>
+          <h4 class="username">Fayzulla Abdullayev</h4>
+          <p class="role">Cyber Security </p>
         </div>
       </div>
     </div>
