--- a/password-generator/index.html
+++ b/password-generator/index.html
@@ -8,8 +8,19 @@
     <title>Password Generator</title>
   </head>
   <body>
+
+
+
     <div class="container">
-      <h2>Password Generator</h2>
+      <div class="orbit orbit1">
+        <span class="circle circle1"></span>
+      </div>
+      <div class="orbit orbit2">
+        <span class="circle circle2"></span>
+      </div>
+      <div class="orbit orbit3">
+        <span class="circle circle3"></span>
+      </div>      <h2>Password Generator</h2>
       <div class="result-container">
         <span id="result"></span>
         <button class="btn" id="clipboard">
